# qxmt-tutorials

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: custom.yaml  simple.yaml  vqe_h2.yaml
custom/: evaluation.py  feature_map.py  raw_preprocess_logic.py  transform_logic.py
notebooks/: practical_case_with_custom_functions_and_the_MNIST_dataset.ipynb  simple_case_using_only_the_default_dataset_and_model.ipynb  simple_vqe_case_quantum_chemistry_calculations.ipynb
