[tool.poetry]
name = "qxmt-tutorials"
version = "0.1.0"
description = ""
authors = ["kenya-sk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10 || ^3.11"
qxmt = "^0.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
