[tool.poetry]
name = "qxmt-tutorials"
version = "0.1.0"
description = ""
authors = ["kenya-sk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10 || ^3.11"
qxmt = "0.3.2"
scikit-learn = "^1.5.2"
jupyterlab = "^4.2.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
